Странный коммит